--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet"  type="text/css" href="/style.css">
+    <link rel="stylesheet"  type="text/css" href="/css/style.css">
   
     <title>Домашние задание</title>
   </head>
